--- a/formulario.html
+++ b/formulario.html
@@ -6,6 +6,40 @@
     <title>Cadastro</title>
 </head>
 <body>
-    
+    <h2>Formulário de Cadastro</h2>
+    <form>
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome" name="nome" value="ex.Fernando"><br><br>
+
+        <label for="sobrenome">Sobrenome:</label>
+        <input type="text" id="sobrenome" name="sobrenome" value="ex.Leme"><br><br>
+
+        <label for="email">E-mail:</label>
+        <input type="email" id="email" name="email" value="fernando.origuela@example.com"><br><br>
+
+        <label for="telefone">Telefone:</label>
+        <input type="tel" id="telefone" name="telefone" value="(00) 12345-6789"><br><br>
+
+        <label for="idade">Idade:</label>
+        <input type="number" id="idade" name="idade" value="15"><br><br>
+
+        <label for="senha">Senha:</label>
+        <input type="password" id="senha" name="senha"><br><br>
+
+        <label for="endereco">Endereço:</label>
+        <input type="text" id="endereco" name="endereco" value="Rua Galaxia, 123"><br><br>
+
+        <label for="cidade">Cidade:</label>
+        <input type="text" id="cidade" name="cidade" value="Cidade Exemplo"><br><br>
+
+        <label for="estado">Estado:</label>
+        <input type="text" id="estado" name="estado" value="Estado Exemplo"><br><br>
+
+        <label for="cep">CEP:</label>
+        <input type="text" id="cep" name=cep value=12345-678><br><br>
+
+        <input type=submit value=Enviar>
+    </form>
+
 </body>
 </html>
